@startuml reviwe-app
 skinparam linetype ortho
 hide circle

entity "users" {
  * id : bigint <<PK>>
  --
  * provider : string
  * uid : string
  * name : varchar(32)
  nickname : varchar(16)
  image : varchar(255)
  is_admin : boolean
  username_created_at : datetime
  username_updated_at : datetime
}

entity profiles {
  * id : bigint <<PK>>
  --
  * user_id  : bigint <<FK>>
  bio        : varchar(140)
  youtube    : varchar(32)
  twitch     : varchar(32)
  twitter    : varchar(32)
}

entity products {
  * id : bigint <<PK>>
  --
  * name        : varchar(256)
  * slug        : varchar(128)
  * code        : varchar(128)
  catchcopy     : varchar(256)
  price         : int
  image         : varchar(256)
  review_average: float
  review_count  : smallint
  item_url      : varchar(256)
  review_slug   : varchar(256)
}

entity shops {
  * id : bigint <<PK>>
  --
  * name  : varchar(128)
  * code  : varchar(128)
  * url   : varchar(256)
}

entity product_shops {
  * id : bigint <<PK>>
  --
  * product_id   : bigint <<FK>>
  * shop_id  : bigint <<FK>>
}


entity reviews {
  * id : bigint <<PK>>
  --
  * user_id    : bigint <<FK>>
  * product_id  : bigint <<FK>>
  description  : varchar(1000)
  rating       : smallint
  bought_date  : datetime
}

entity analysis {
  * id : bigint <<PK>>
  --
  * product_id : bigint <<FK>>
  positive    : smallint
  neutral     : smallint
  negative    : smallint
  summary     : varchar(400)
  sum_positive : varchar(400)
  sum_negative : varchar(400)
}

entity genres {
  * id : bigint <<PK>>
  --
  * code : int
  name : varchar(64)
}

entity product_genres {
  * id : bigint <<PK>>
  --
  * product_id   : bigint <<FK>>
  * genre_id  : bigint <<FK>>
  * level : smallint
}


users ||--|| profiles
users ||--o{ reviews
products ||--o{ reviews
products ||--|{ product_shops
shops ||--|{ product_shops
products ||--o| analysis
products ||--o{ product_genres
genres ||--o{ product_genres

@enduml